# continuous-alignment-testing

./: .flake8  .gitignore  .tool-versions  CLAUDE.md  CONTRIBUTORS.md  LICENSE  README.md  datasources.yaml  docker-compose.yml  otel-collector-config.yaml  pyproject.toml
.github/actions/commit-visualizations/: action.yml
.github/actions/setup-python-poetry/: action.yml
.github/workflows/: calculate-error-margin.sh  cat-test-examples.yml  python-tests.yml  set-number-of-runs.sh  show-statistical-report.sh
.run/: Template Python tests.run.xml
data-store/: docker-compose.yml  readme.md
data-store/gdrive/: reliability-dashboard.ipynb
data-store/minio/: reliability-graph.ipynb
docs/: _config.yml  about.markdown  getting-started.md  index.markdown  local-development.md  running-in-ci.md
docs/api/: .buildinfo  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  src.cat_python.html  src.html
docs/api/.doctrees/: environment.pickle  index.doctree  modules.doctree  src.cat_python.doctree  src.doctree
docs/api/_sources/: index.rst.txt  src.cat_python.rst.txt  src.rst.txt
examples/graphic_image/: readme.md
examples/graphic_image/tests/: test_describe_image.py
examples/team_recommender/: .env.example  .gitignore  conftest.py  readme.md
examples/team_recommender/src/: logger_to_opentelemetry.py  response_matches_json_schema.py  retry.py  settings.py
examples/team_recommender/tests/: conftest.py  helpers.py  retry.py  settings.py  test_helpers.py  test_proportions_ztest.py  test_response_matches_json_schema.py  test_retry.py
examples/team_recommender/tests/example_0_text_output/: test_good_fit_for_project.py
examples/team_recommender/tests/example_10/: test_measurement_is_within_threshold.py
examples/team_recommender/tests/example_10_instrumentation/: test_add_instrumentation_to_validation.py
examples/team_recommender/tests/example_10_threshold/: test_measurement_is_within_threshold.py
examples/team_recommender/tests/example_1_text_response/: cosine_similarity.py  openai_embeddings.py  test_compute_alignment.py  test_compute_cosine_similarity.py  test_good_fit_for_project.py  test_openai_embeddings.py
examples/team_recommender/tests/example_1_text_response/snapshots/test_compute_alignment/test_compute_alignment/: alignment_vector_json_snapshot.json
examples/team_recommender/tests/example_1_text_response/snapshots/test_compute_cosine_similarity/test_compute_alignment/: alignment_vector_json_snapshot.json
examples/team_recommender/tests/example_1_text_response/snapshots/test_compute_cosine_similarity/test_reproducing_the_same_text_embedding/: hallucination_response.json  hallucination_response_large_different_text_embedding.json  hallucination_response_large_same_text_embedding.json
examples/team_recommender/tests/example_1_text_response/snapshots/test_good_fit_for_project/test_llm_will_hallucinate_given_no_data/: hallucination_response.json  hallucination_response.txt  please_provide_missing_information_response.txt
examples/team_recommender/tests/example_1_unit/: test_allocations_unit.py
examples/team_recommender/tests/example_2/: test_allocations_unit_boolean_outcome.py
examples/team_recommender/tests/example_2_loop/: test_allocations_loop.py
examples/team_recommender/tests/example_2_unit/: test_allocations_unit.py
examples/team_recommender/tests/example_3_loop/: test_allocations_loop.py
examples/team_recommender/tests/example_3_loop_no_hallucinating/: test_allocations_hallucinating.py
examples/team_recommender/tests/example_4_gate_on_success_threshold/: test_allocations_threshold.py
examples/team_recommender/tests/example_4_loop_no_hallucinating/: test_allocations_hallucinating.py
examples/team_recommender/tests/example_5_gate_on_success_threshold/: test_allocations_threshold.py
examples/team_recommender/tests/example_6_n_generations/: test_faster_with_n_generations.py
examples/team_recommender/tests/example_7_schema_validators/: test_response_has_valid_schema.py
examples/team_recommender/tests/example_8_retry_network/: test_retry_response_generation.py
examples/team_recommender/tests/example_9_retry_with_open_telemetry/: test_retry_to_open_telemetry.py
examples/team_recommender/tests/example_9_threshold/: test_measurement_is_within_threshold.py
examples/team_recommender/tests/fixtures/: hallucination_response.json  output_schema.json  please_provide_missing_information_response.json
integrations/openlit/tests/: helpers.py
integrations/openlit/tests/example_1_openlit_integration/: test_results_available_in_openlit.py
integrations/opentelemetry/: .env.example  readme.md
integrations/opentelemetry/src/: config.yaml
integrations/opentelemetry/tests/: helpers.py
integrations/opentelemetry/tests/example_1_opentelemetry_integration/: test_responses_available_in_opentelemetry.py
integrations/opentelemetry/tests/fixtures/: example_output.json  output_schema.json  skills.json
src/cat_ai/: __init__.py  graph-data.csv  publish_to_gdrive.py  reporter.py  runner.py  statistical_analysis.py  validator.py
src/cat_ai/helpers/: __init__.py  helpers.py
tests/: conftest.py  test_reporter.py  test_runner.py  test_statistical_analysis.py
tests/cat_ai/: test_reporter.py  test_runner.py
tests/snapshots/test_reporter/test_report_creates_correct_json/: expected_report.json
tests/snapshots/test_statistical_analysis/test_failure_rate_bar_graph/: failure_rate_results.csv  failure_rate_results.json
