[project]
name = "cat-ai"
version = "0.0.5-alpha"
description = "Python client for running CAT tests in a Python codebase"
authors = [
  { name = "Mike Gehard", email = "mikegehard@artium.ai" },
  { name = "Randy Lutcavich", email = "randylutcavich@artium.ai" },
  { name = "Erik Luetkehans", email = "erikluetkehans@artium.ai" },
  { name = "Paul Zabelin", email = "paulzabelin@artium.ai" },
  { name = "Tim Kersey", email = "timkersey@artium.ai" },
  { name = "Michael Harris", email = "michaelharris@artium.ai" },
]
requires-python = "~=3.13"
readme = "README.md"
dependencies = ["pydantic>=2.10.6,<3", "pydrive2>=1.21.3,<2"]
packages = [{ include = "cat_ai", from = "src" }]
license = "MIT"

[dependency-groups]
test = [
  "pytest>=8.3.4,<9",
  "pytest-asyncio>=0.21.0,<0.22",
  "mypy>=1.8.0,<2",
  "black>=24.2.0,<25",
]
examples = ["openai>=1.63.2,<2", "python-dotenv>=1.0.1,<2"]
dev = [
  "sphinx>=8.1.3,<9",
  "sphinx-rtd-theme>=3.0.2,<4",
  "sphinx-markdown-builder>=0.6.8,<0.7",
]

[tool.uv]
default-groups = ["test", "examples", "dev"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = [".", "src"]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.13"
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
strict_optional = true
namespace_packages = true
explicit_package_bases = true
mypy_path = ["src"]

[tool.black]
line-length = 120
target-version = ['py313']
include = '\.pyi?$'

[tool.ruff]
# Rule selection and configuration
line-length = 120
lint.extend-ignore = ["E203"]
exclude = [".git", "__pycache__", "build", "dist"]
# Equivalent to max-complexity
lint.mccabe = { max-complexity = 10 }
